<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CardioSport</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="login_progress_signing_in">Signing in...</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="title_activity_service_settings">Service Settings</string>
    <string name="menu_settings">Service Settings...</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number_hint">+79152224455</string>
    <string name="planned_start_date">Planned date:</string>
    <string name="connect">Connect...</string>
    <string name="activities">Activities:</string>
    <string name="refresh">Refresh</string>
    <string name="save">Save</string>
    <string name="description">Description:</string>
    <string name="duration">Duration:</string>
    <string name="activity_details">Activity details</string>
    <string name="workout_description">Workout description</string>
    <string name="refreshing">Refreshing...</string>
    <string name="press_back_to_close_app">Press BACK once more to close this application</string>
    <string name="press_back_to_close_workout">Press BACK once more to close Workout</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_current_workout">Current Workout</string>
    <string name="tab_history">History</string>
    <string name="tab_about">About</string>
    <string name="empty_string" />
    <string name="menu_logout">Log out</string>
    <string name="no_current_workout_message">No workout data to display. Try refreshing.</string>
    <string name="title_settings_protocol">Protocol</string>
    <string name="title_settings_host_name">Host name</string>
    <string name="title_settings_port_number">Port number</string>
    <string name="title_settings_service_path">Resource path</string>
    <string name="birth_date">Birth date</string>
    <string name="your_weight">Your weight (kg)</string>
    <string name="your_profile">Your profile:</string>
    <string name="bluetooth_settings">Bluetooth Settings...</string>
    <string name="workout_time">Workout time:</string>
    <string name="n_a">N/A</string>
    <string name="workout">Workout:</string>
    <string name="metronome">Metronome:</string>
    <string name="start_stop_btn">Start / Stop</string>
    <string name="HR">HR</string>
    <string name="current_activity">Activity:</string>
    <string name="activity_time">Time:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="profile_saved_locally">Profile has been saved.</string>
    <string name="unsupported_operation">Unsupported operation.</string>
    <string name="select_device_to_connect">Select your Polar H7</string>
</resources>
