<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="4dip">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00"
                android:id="@+id/activity_time"
                android:padding="10dip"
                android:textStyle="bold"
                android:textSize="16pt"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HR"
                    android:id="@+id/heart_rate"
                    android:textStyle="bold"
                    android:padding="10dip"
                    android:textSize="16pt"
                    android:layout_gravity="right"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dip"
                android:text="@string/workout"
                android:layout_gravity="left|center_vertical"
                android:textSize="10pt"
                android:visibility="gone"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/workout" android:layout_gravity="left|center_vertical"
                android:textSize="10pt"
                android:padding="5dip"
                android:text="@string/n_a"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dip"
                android:text="@string/current_activity"
                android:layout_gravity="left|center_vertical"
                android:textSize="10pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:id="@+id/activity" android:layout_gravity="left|center_vertical"
            android:textSize="10pt"
            android:padding="5dip"/>
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_time"
                android:textSize="9pt"
                android:layout_gravity="left|center_vertical"
                android:padding="4dip"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textSize="9pt"
                android:id="@+id/activity_time_left" android:layout_gravity="center|center_vertical"
                android:padding="4dip"/>

     </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:paddingLeft="4dip"
            android:text="@string/workout_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:id="@+id/workoutTime" android:layout_gravity="left|center_vertical"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Speed"
            android:id="@+id/speed" android:layout_gravity="left|center_vertical"
            android:paddingLeft="4dip"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pace"
            android:id="@+id/pace"
            android:paddingLeft="4dip"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Latitude"
            android:id="@+id/latitude" android:layout_gravity="left|center_vertical"
            android:paddingLeft="4dip"
            android:visibility="gone"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Longitude"
            android:id="@+id/longitude" android:layout_gravity="left|center_vertical"
            android:paddingLeft="4dip"
            android:visibility="gone"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:id="@+id/status" android:layout_gravity="left|center_vertical"
            android:paddingLeft="4dip"/>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

        <Switch
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/metronome"
                android:id="@+id/metronome_switch"
                android:enabled="true"
                android:padding="4dip"
                android:checked="false"
                android:textSize="9pt"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
            android:id="@+id/start_button" android:enabled="false"
                android:layout_marginTop="10dip"
                android:layout_marginRight="5dip"
            android:singleLine="true"
            android:text="@string/start" />
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Pause / Unpause"
                android:id="@+id/pause_button" android:enabled="false"
                android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>